<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trivial Android 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="titulo">Trivial Android</string>
    <string name="subtitulo">¿How much do you know about Android?</string>
    <string name="creditos">aprendeandroid.es</string>
    <string name="menuGame">Play</string>
    <string name="menuScores">Scores</string>
    <string name="menuSettings">Settings</string>
    <string name="menuHelp">Help</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="salir_menu">Exit</string>
    <string name="hint_nickname">(Enter Nickname)</string>
    <string name="hint_email">(Enter email)</string>
    <string name="text_dateOB">Birthday</string>
    <string name="settings_dob_not_set">No Date Set</string>
    <string name="settings_button_pwd">Password</string>
    <string name="settings_pwd_not_set">No Password Set</string>
    <string name="btn_registro">Register/Modify</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_neutral">I prefer not say</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="settings_password">Password:</string>
    <string name="settings_password2">Repite Password:</string>
    <string name="title_activity_password_dialog_fragment">PasswordDialogFragment</string>
    <string name="settings_pwd_equals">Match</string>
    <string name="settings_pwd_not_equals">NO Match</string>
    <string name="title_activity_avatares_dialog_fragment">AvataresDialogFragment</string>
    <string name="avatar_assets_dir">avatares</string>
    <string name="settings_pwd_set">Password established</string>
    <string name="no_scores">No Puntuación</string>
    <string name="no_preguntas">no más preguntas</string>
    <string name="preguntas_assets_dir">preguntas</string>
    <string name="reset">Reiniciar juego</string>
    <string name="irMenu">Menú</string>
    <string name="title_activity_up_pregunta">UpPreguntaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menuSubir">Upload question</string>
    <string name="textPregunta">Question:</string>
    <string name="hintPregunta">Question text</string>
    <string name="textRespuestas">Answers:</string>
    <string name="hintRespuestaA">Answer A</string>
    <string name="hintRespuestaB">Answer B</string>
    <string name="hintRespuestaC">Answer C</string>
    <string name="hintRespuestaD">Answer D</string>
    <string name="textRespuestaOK">Correct Answer:</string>
    <string name="imagenAssociada">Picture:</string>
     <string name="SubirP">Upload Question</string>

</resources>